# Noda

./: .buildinfo  .gitignore  AUTHORS  CITATION.cff  COPYRIGHT  MANIFEST.in  README.md  advanced_use.html  api.html  background.html  basic_use.html  credits.html  genindex.html  getting_started.html  index.html  installation.html  model_systems.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: docs_pages.yml
_modules/: alloy_system.html  boundary_conditions.html  composition_variables.html  data_io.html  index.html  initial_conditions.html  lattice.html  log_utils.html  meshing.html  mobility.html  para_io.html  paths.html  plots.html  results.html  results_io.html  simu.html  solvers.html  space.html  temperature.html  thermo_functions.html  thermo_wrappers.html  thermodynamics.html  time_grid.html  trackers.html  utils.html
_sources/: advanced_use.rst.txt  api.rst.txt  background.rst.txt  basic_use.rst.txt  credits.rst.txt  getting_started.rst.txt  index.rst.txt  installation.rst.txt  model_systems.rst.txt
_sources/modules/: composition_variables.rst.txt  constants.rst.txt  data_io.rst.txt  log_utils.rst.txt  meshing.rst.txt  mobility.rst.txt  para_io.rst.txt  paths.rst.txt  plots.rst.txt  simu.rst.txt  space.rst.txt  utils.rst.txt  (+5 more)
doc/: Makefile  make.bat
modules/: alloy_system.html  boundary_conditions.html  composition_variables.html  constants.html  data_io.html  initial_conditions.html  lattice.html  log_utils.html  meshing.html  mobility.html  para_io.html  paths.html  plots.html  results.html  results_io.html  simu.html  solvers.html  space.html  temperature.html  thermo_functions.html  thermo_wrappers.html  thermodynamics.html  time_grid.html  trackers.html  utils.html
noda/: __init__.py  alloy_system.py  boundary_conditions.py  composition_variables.py  constants.py  data_io.py  initial_conditions.py  lattice.py  log_utils.py  meshing.py  mobility.py  para_io.py  paths.py  plots.py  results.py  results_io.py  simu.py  solvers.py  space.py  temperature.py  thermo_functions.py  thermo_wrappers.py  thermodynamics.py  time_grid.py  trackers.py  utils.py
tests/: conftest.py
(+54 files in other folders)
